--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ button {
     margin: 25px 5px 0 5px; 
     font-size: 18px;
     font-weight: bold;
-    background-color: #00ff5e; 
+    background-color: #29a80f; 
     color: white; 
     border: none;
     display: inline-block;
@@ -86,7 +86,7 @@ button {
     margin: 25px 5px 0 5px; 
     font-size: 18px;
     font-weight: bold;
-    background-color: #ff3300; 
+    background-color: #c21313; 
     color: white; 
     border: none;
     display: inline-block;
@@ -119,6 +119,7 @@ button {
     font-weight: bold;
     margin-bottom: 5px; /* Kicsit elválasztjuk a kérdéstől */
 }
+
 
 
 
