--- a/style.css
+++ b/style.css
@@ -111,14 +111,18 @@ button {
     /* Kicsit nagyobb margóval különböztetjük meg a fejezetektől */
     margin: 30px 0 10px 0; 
 }
+/* style.css (A fájl végére) */
+
 #progress {
     /* Esztétikusabb, kisebb, szürke progressz számláló */
     font-size: 16px; 
     color: #6c757d; /* Sötét szürke szín */
     text-align: center; /* Középre igazítás */
     font-weight: bold;
-    margin-bottom: 5px; /* Kicsit elválasztjuk a kérdéstől */
+    margin-top: -15px; /* Kicsit feljebb húzzuk a H1-hez */
+    margin-bottom: 20px; /* Szépen elválasztjuk a kérdéstől */
 }
+
 
 
 
